--- a/frontend-assignments/toDoList.css
+++ b/frontend-assignments/toDoList.css
@@ -15,9 +15,10 @@ html {
 
 body {
     background: linear-gradient(to bottom, #68eacc 0%, #497be8 100%);
-    font-size: 1.6rem;   
     width: 100%;
     height: 100vh;
+    font-size: 1.6rem;
+    font-weight: 400; 
     display: flex;
     justify-content: center;
     padding-top: 130px;
@@ -29,6 +30,9 @@ body {
     background-color: white;
     padding: 25px;
     text-align: center; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
@@ -40,6 +44,7 @@ h1 {
     display: flex;
     justify-content: center;
     width: 100%;
+    max-width: 351px;
     margin: 20px 0;
 }
 
@@ -48,7 +53,6 @@ h1 {
     height: 4.5rem;
     max-width: 300px;
     font-size: 1.7rem;
-    font-weight: 400;
     padding: 0 17px;
     outline: none;
     border: 1px solid #ccc;
@@ -79,11 +83,22 @@ button i {
     border-radius: 3px;
     background-color: var(--primary-color);
     opacity: 0.3;
-    transition: all 0.3s ease;
+    transition: all 0.17s ease;
+    pointer-events: none;
+}
+
+#btn-addtodo.active {
+    opacity: 0.8;
+    pointer-events: auto;
+}
+
+#btn-addtodo.active:hover {
+    opacity: 1;
 }
 
 #todo-entry-container {
     width: 100%;
+    max-width: 351px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,7 +108,6 @@ button i {
     list-style: none;
     background-color: #f2f2f2;
     width: 100%;
-    max-width: 351px;
     min-height: 4.5rem;
     border-radius: 3px;
     position: relative;
@@ -115,7 +129,7 @@ button i {
     display: flex;
     height: 100%;
     transform: translateX(100%);
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
 }
 
 .todo-entry:hover .todo-slide {
@@ -135,11 +149,8 @@ button i {
 }
 
 .todo-credit {
-    position: relative;
     width: 100%;
     max-width: 351px;
-    left: 50%;
-    transform: translateX(-50%);
     display: flex;
     align-items: center;
     text-align: left;
@@ -156,7 +167,6 @@ button i {
     border-radius: 3px;
     margin-left: 10px;
     font-weight: 400;
-
 }
 @media (min-width: 576px) {
     #todolist-container {
