--- a/frontend-assignments/toDoList.css
+++ b/frontend-assignments/toDoList.css
@@ -76,23 +76,37 @@ button i {
     font-size: 2rem;
 }
 
+form button {
+    width: 43px;
+    flex-shrink: 0;
+    margin-left: 3px;
+    border-radius: 3px;
+    opacity: 0.3;
+    pointer-events: none;
+    transition: opacity 0.17s ease;
+}
+
+#btn-edit-cancel {
+    background-color: #e84949;
+}
+
+#btn-edit-confirm {
+    background-color: #49e85e;
+}
+
 #btn-addtodo {
     width: 48px;
     min-width: 45px;
-    margin-left: 3px;
-    border-radius: 3px;
+    flex-shrink: 1;
     background-color: var(--primary-color);
-    opacity: 0.3;
-    transition: all 0.17s ease;
-    pointer-events: none;
 }
 
-#btn-addtodo.active {
+button.active {
     opacity: 0.8;
     pointer-events: auto;
 }
 
-#btn-addtodo.active:hover {
+button.active:hover {
     opacity: 1;
 }
 
@@ -119,7 +133,7 @@ button i {
 }
 
 .todo-text {
-    margin: 5px 15px;
+    padding: 5px 15px;
 }
 
 .todo-slide {
@@ -168,6 +182,11 @@ button i {
     margin-left: 10px;
     font-weight: 400;
 }
+
+.hide {
+    display: none;
+}
+
 @media (min-width: 576px) {
     #todolist-container {
         max-width: 350px;
