--- a/advanced-frontend-lessons/tailwind-css/public/style.css
+++ b/advanced-frontend-lessons/tailwind-css/public/style.css
@@ -557,6 +557,10 @@ video {
 	margin: 4rem;
 }
 
+.m-2 {
+	margin: 0.5rem;
+}
+
 .m-3 {
 	margin: 0.75rem;
 }
@@ -567,10 +571,6 @@ video {
 
 .m-8 {
 	margin: 2rem;
-}
-
-.m-2 {
-	margin: 0.5rem;
 }
 
 .mx-auto {
@@ -630,6 +630,22 @@ video {
 
 .mt-4 {
 	margin-top: 1rem;
+}
+
+.mt-1 {
+	margin-top: 0.25rem;
+}
+
+.mt-8 {
+	margin-top: 2rem;
+}
+
+.mt-2 {
+	margin-top: 0.5rem;
+}
+
+.mt-6 {
+	margin-top: 1.5rem;
 }
 
 .block {
@@ -692,6 +708,10 @@ video {
 	width: 100vw;
 }
 
+.w-1\/4 {
+	width: 25%;
+}
+
 .max-w-full {
 	max-width: 100%;
 }
@@ -744,9 +764,8 @@ video {
 	border-radius: 0.5rem;
 }
 
-.rounded-b {
-	border-bottom-right-radius: 0.25rem;
-	border-bottom-left-radius: 0.25rem;
+.rounded-bl-lg {
+	border-bottom-left-radius: 0.5rem;
 }
 
 .rounded-br-lg {
@@ -759,14 +778,6 @@ video {
 
 .rounded-tr-lg {
 	border-top-right-radius: 0.5rem;
-}
-
-.rounded-bl-lg {
-	border-bottom-left-radius: 0.5rem;
-}
-
-.rounded-tr {
-	border-top-right-radius: 0.25rem;
 }
 
 .border {
@@ -803,14 +814,9 @@ video {
 	background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
+.bg-gray-200 {
 	--tw-bg-opacity: 1;
-	background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+	background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .fill-current {
@@ -823,6 +829,14 @@ video {
 
 .p-6 {
 	padding: 1.5rem;
+}
+
+.p-5 {
+	padding: 1.25rem;
+}
+
+.p-2 {
+	padding: 0.5rem;
 }
 
 .px-16 {
@@ -870,6 +884,16 @@ video {
 	padding-bottom: 2rem;
 }
 
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
+
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+}
+
 .text-center {
 	text-align: center;
 }
@@ -904,8 +928,26 @@ video {
 	line-height: 1.75rem;
 }
 
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
+
 .font-bold {
 	font-weight: 700;
+}
+
+.font-semibold {
+	font-weight: 600;
+}
+
+.uppercase {
+	text-transform: uppercase;
 }
 
 .text-black {
@@ -948,6 +990,46 @@ video {
 	color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-gray-500 {
+	--tw-text-opacity: 1;
+	color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-indigo-700 {
+	--tw-text-opacity: 1;
+	color: rgb(67 56 202 / var(--tw-text-opacity));
+}
+
+.placeholder-gray-400::-moz-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-400::placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-600::-moz-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgb(75 85 99 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-600::placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgb(75 85 99 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-500::-moz-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgb(107 114 128 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-500::placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgb(107 114 128 / var(--tw-placeholder-opacity));
+}
+
 .opacity-75 {
 	opacity: 0.75;
 }
@@ -964,6 +1046,13 @@ video {
 	--tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 	--tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color),
 		0 2px 4px -2px var(--tw-shadow-color);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+		var(--tw-shadow);
+}
+
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+	--tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
 		var(--tw-shadow);
 }
@@ -987,6 +1076,11 @@ video {
 	background-color: rgb(67 56 202 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-indigo-900:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgb(49 46 129 / var(--tw-bg-opacity));
+}
+
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -1002,11 +1096,27 @@ video {
 	color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 640px) {
-	.sm\:grid {
-		display: grid;
-	}
+.hover\:text-indigo-900:hover {
+	--tw-text-opacity: 1;
+	color: rgb(49 46 129 / var(--tw-text-opacity));
+}
 
+.hover\:shadow:hover {
+	--tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+	--tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+		var(--tw-shadow);
+}
+
+.hover\:shadow-lg:hover {
+	--tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+	--tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
+		0 4px 6px -4px var(--tw-shadow-color);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+		var(--tw-shadow);
+}
+
+@media (min-width: 640px) {
 	.sm\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
@@ -1075,16 +1185,16 @@ video {
 		display: flex;
 	}
 
-	.lg\:grid {
-		display: grid;
-	}
-
 	.lg\:hidden {
 		display: none;
 	}
 
 	.lg\:w-auto {
 		width: auto;
+	}
+
+	.lg\:w-1\/2 {
+		width: 50%;
 	}
 
 	.lg\:flex-grow {
@@ -1097,5 +1207,9 @@ video {
 
 	.lg\:items-center {
 		align-items: center;
+	}
+
+	.lg\:p-10 {
+		padding: 2.5rem;
 	}
 }
